2005-08-02  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/procbrowser.c: Quick and dirty restore of browser
	functionality.

2005-08-02  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpuitypes.h: added GimpProcBrowserDialog typedef here.

	* libgimp/gimpprocbrowserdialog.[ch]
	* libgimp/gimpprocview.[ch]: fixed copyright headers, added
	G_BEGIN_DECLS / G_END_DECLS.

2005-08-02  Michael Natterer  <mitch@gimp.org>

	* plug-ins/dbbrowser/Makefile.am
	* plug-ins/dbbrowser/gimpprocbrowser.[ch]
	* plug-ins/dbbrowser/gimpprocview.[ch]: removed these files...

	* libgimp/Makefile.am
	* libgimp/gimpui.h
	* libgimp/gimpui.def
	* libgimp/gimpprocbrowserdialog.[ch]
	* libgimp/gimpprocview.[ch]: ...and added them here. Turned the
	procedure browser into a widget called GimpProcBrowserDialog and
	changed its API completely. Fixes bug #165009.

	* plug-ins/dbbrowser/plugin-browser.c
	* plug-ins/dbbrowser/procedure-browser.c
	* plug-ins/script-fu/Makefile.am
	* plug-ins/script-fu/script-fu-console.c: changed accordingly.

	* plug-ins/pygimp/Makefile.am
	* plug-ins/pygimp/procbrowser.c: ditto (#if 0'ed stuff so it compiles).

2005-08-02  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselectoptions.[ch]
	* app/tools/gimpforegroundselecttool.[ch]: some code cleanup; moved
	stroke width to the tool options.

2005-07-31  Manish Singh  <yosh@gimp.org>

	* app/composite/Makefile.am
	* app/composite/make-installer.py: fix code generation filenames.

2005-07-31  Manish Singh  <yosh@gimp.org>

	* acinclude.m4
	* m4macros/Makefile.am
	* m4macros/detectcflags.m4: new macro: GIMP_DETECT_CFLAGS; used
	to detect which of a set of compiler options a compiler supports.

	* configure.in: use the above for the altivec and -fno-strict-aliasing
	flags. Also, use it to detect the presence of -mmmx and -msse, since
	those are needed to compile even MMX/SSE assembly with gcc 4.0. Define
	MMX/SSE_EXTRA_CFLAGS.

	* app/composite/Makefile.am: compile each of the composite flavors