@@ -200,7 +200,7 @@ gimp_image_combo_box_drag_data_received (GtkWidget        *widget,
       return;
     }
 
-  str = g_strndup (selection->data, selection->length);
+  str = g_strndup ((const gchar *) selection->data, selection->length);
 
   if (g_utf8_validate (str, -1, NULL))
     {
