@@ -272,7 +272,7 @@ gimp_palette_select_drag_data_received (GtkWidget        *widget,
       return;
     }
 
-  str = g_strndup (selection->data, selection->length);
+  str = g_strndup ((const gchar *) selection->data, selection->length);
 
   if (g_utf8_validate (str, -1, NULL))
     {
