@@ -506,7 +506,7 @@ gimp_pattern_select_drag_data_received (GtkWidget        *preview,
       return;
     }
 
-  str = g_strndup (selection->data, selection->length);
+  str = g_strndup ((const gchar *) selection->data, selection->length);
 
   if (g_utf8_validate (str, -1, NULL))
     {
